# iron-shield

./: .clippy.toml  .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Justfile  QWEN.md  build.rs  clippy.toml  config.example.json5
.github/workflows/: release.yml
frontend/src/: a11y.ts  clock.ts  filters.ts  index.js  index.ts  notifications.ts  settings.ts  style.css  telemetry.ts  theme.ts  uptime.ts
frontend/src/styles/: base.css  clock.css  filters.css  notifications.css  settings.css  sites.css
src/: config.rs  error.rs  index.rs  lib.rs  main.rs  server.rs  settings.rs  sites.rs  telemetry.rs  uptime.rs  utils.rs
static/: script.js  style.css
templates/: index.html  settings.html  site_card.html
tests/: playwright_test.rs  server_unit_test.rs  settings_unit_test.rs
