[package]
edition = "2021"
name = "iron_shield"
version = "0.1.0"
default-run = "iron_shield"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = {version = "0.11.1", features = ["with-axum"]}
askama_axum = "0.2"
axum = "0.6"
json5 = "0.4"
rand = "0.8"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0.143", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.20.1", features = ["full"]}
tokio-stream = "0.1"
tower-http = {version="0.4.0", features = ["fs"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
