[package]
edition = "2021"
name = "iron_shield"
version = "0.0.1"
default-run = "iron_shield"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = {version = "0.11.1", features = ["with-axum"]}
askama_axum = "0.2"
axum = "0.7"
chrono = {version = "0.4", features = ["serde"]}
json5 = "0.4"
notify = "6.1"
rand = "0.8"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0.143", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.20.1", features = ["full"]}
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = {version="0.5.0", features = ["fs"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
url = "2.4"
http-body-util = "0.1"

[dev-dependencies]
playwright = "0.0.20"
reqwest = "0.11"
tokio-test = "0.4"
tempfile = "3.3"

[build-dependencies]
tokio = {version = "1.20.1", features = ["full"]}
rspack = { version = "0.6", features = ["loader_swc"] }
rspack_core = "0.6"
rspack_tasks = "0.6"
serde_json = "1.0"
